--- a/ABC_Segmentation_Analysis.ipynb
+++ b/ABC_Segmentation_Analysis.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP86g1gM43rGikztjTv8I1S",
+      "authorship_tag": "ABX9TyMKMeKJ+Mbfk6zLUmNVunYX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -654,7 +654,7 @@
         "id": "T7NbV82vVlxV"
       },
       "source": [
-        "20% dos items correspondem a 80% da receita."
+        "Em torno de 20% dos items correspondem a 80% da receita. Esses itens fazem parte do cluster A."
       ]
     },
     {
@@ -837,7 +837,172 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WI_BbpwxVRPM"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WI_BbpwxVRPM",
+        "outputId": "f4716038-61a5-4916-81ae-a7c98006b2aa"
+      },
+      "source": [
+        "df_revenue_by_item['cluster_abc'].value_counts(1).sort_index()"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "A    0.208721\n",
+              "B    0.090303\n",
+              "C    0.700977\n",
+              "Name: cluster_abc, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 424
+        },
+        "id": "vRLwEf4_WSBW",
+        "outputId": "1edae87f-ecde-41b1-c847-442fe7584217"
+      },
+      "source": [
+        "df_revenue_by_item.query('cluster_abc == \"A\"').sort_values('Revenue', ascending=False)"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Description</th>\n",
+              "      <th>Revenue</th>\n",
+              "      <th>cluster_abc</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>DOTCOM POSTAGE</td>\n",
+              "      <td>206245.48</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>REGENCY CAKESTAND 3 TIER</td>\n",
+              "      <td>164762.19</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n",
+              "      <td>99668.47</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>PARTY BUNTING</td>\n",
+              "      <td>98302.98</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>JUMBO BAG RED RETROSPOT</td>\n",
+              "      <td>92356.03</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>871</th>\n",
+              "      <td>GREEN GIANT GARDEN THERMOMETER</td>\n",
+              "      <td>2621.41</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>872</th>\n",
+              "      <td>PACK OF 6 SWEETIE GIFT BOXES</td>\n",
+              "      <td>2618.75</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>873</th>\n",
+              "      <td>CHEST OF DRAWERS GINGHAM HEART</td>\n",
+              "      <td>2614.06</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>874</th>\n",
+              "      <td>RECYCLED ACAPULCO MAT LAVENDER</td>\n",
+              "      <td>2613.18</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>875</th>\n",
+              "      <td>ANTIQUE ALL GLASS CANDLESTICK</td>\n",
+              "      <td>2611.95</td>\n",
+              "      <td>A</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>876 rows × 3 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                            Description    Revenue cluster_abc\n",
+              "0                        DOTCOM POSTAGE  206245.48           A\n",
+              "1              REGENCY CAKESTAND 3 TIER  164762.19           A\n",
+              "2    WHITE HANGING HEART T-LIGHT HOLDER   99668.47           A\n",
+              "3                         PARTY BUNTING   98302.98           A\n",
+              "4               JUMBO BAG RED RETROSPOT   92356.03           A\n",
+              "..                                  ...        ...         ...\n",
+              "871      GREEN GIANT GARDEN THERMOMETER    2621.41           A\n",
+              "872        PACK OF 6 SWEETIE GIFT BOXES    2618.75           A\n",
+              "873     CHEST OF DRAWERS GINGHAM HEART     2614.06           A\n",
+              "874      RECYCLED ACAPULCO MAT LAVENDER    2613.18           A\n",
+              "875       ANTIQUE ALL GLASS CANDLESTICK    2611.95           A\n",
+              "\n",
+              "[876 rows x 3 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tnHxRrNdWd5O"
       },
       "source": [
         ""
